--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+password=mysql
+url=jdbc:mysql://localhost:3306/submitideas?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 
+spring.liquibase.change-log=classpath:/db/changelog/dbChangeLog.xml
+
+server.port=8080
