--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,14 @@ url=jdbc:mysql://localhost:3306/submitideas?useUnicode=true&useJDBCCompliantTime
 
 spring.liquibase.change-log=classpath:/db/changelog/dbChangeLog.xml
 
+spring.jpa.hibernate.ddl-auto=create
+
 server.port=8080
+
+spring.mail.host=smtp.gmail.com
+spring.mail.username=bartektestowyjava
+spring.mail.password=Bartek123$$
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.smtp.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
