--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 password=mysql
+name=root
 url=jdbc:mysql://localhost:3306/submitideas?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 
 spring.liquibase.change-log=classpath:/db/changelog/dbChangeLog.xml
 
 spring.jpa.hibernate.ddl-auto=create
-
-server.port=8080
 
 spring.mail.host=smtp.gmail.com
 spring.mail.username=bartektestowyjava
