--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.smtp.port=587
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
