--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.mvc.view.prefix=/templates/
+spring.mvc.view.suffix=.html
